--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "promisify": "^0.0.3",
     "socket.io": "^4.6.2"
